# cat-dog-recog

./: .gitignore  README.md  clean_images.py  code_by_bob.py  dataset.py  evaluate.py  inference.py  main.py  model.py  pyproject.toml  ruff.toml  trainer.py  utils.py
